# service-agent-c

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.md  NOTICE  NOTICES  README.md
include/: svc_agt.h  svcagt_db.h  svcagt_files.h  svcagt_log.h  svcagt_startup_states.h  svcagt_systemctl.h  svcagt_time.h
src/: CMakeLists.txt  service-agent-c.c  service-agent-c.h  svc_agt.c  svcagt_db.c  svcagt_files.c  svcagt_log.c  svcagt_startup_states.c  svcagt_systemctl.c  svcagt_time.c
tests/: CMakeLists.txt  check_goal_states_file.c  mock_systemctl.c  mock_systemctl.py  sajwt1.service  sajwt2.service  sajwt3.service  setup_svcagt_services.py  simple.c  start_mocksys.sh  start_pass_fail.sh  start_sajwt_test.sh  start_systemd_test.sh  svcagt_exclude_services.txt  svcagt_test_service.c  systemd_test_goal_states.txt  test_svcagt.c
tests/mock_systemd_libs/etc/: sajwt.service  sajwt1.service  sajwt2.service  sajwt3.service
tests/mock_systemd_libs/usr/: NetworkManager.service  chronyd.service  corosync-notifyd.service  corosync.service  gdm.service  ipsec.service  iscsi.service  libvirt-guests.service  libvirtd.service  nfs-server.service  openvpn@.service  plymouth-halt.service  plymouth-kexec.service  plymouth-poweroff.service  plymouth-reboot.service  plymouth-start.service  rpcbind.service  systemd-fsck-root.service  systemd-tmpfiles-setup-dev.service  virtlockd.service  winbind.service  xl2tpd.service  zvbid.service
